🐞 Fix GitHub contributions

--- a/app/globals.css
+++ b/app/globals.css
@@ -1438,6 +1438,12 @@ a[data-footnote-ref] {
   position: relative;
   margin: 2rem auto;
   padding: 1rem;
+
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: none;
+  pointer-events: auto;
 }
 
 .contributions-grid {
