🛠️ Individual Blog and Project pages and fixed bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -1419,7 +1419,7 @@ a[data-footnote-ref] {
 }
 
 [data-theme="dark"] .contribution-cell {
-  background-color: #161b22;
+  background-color: #1b222a;
 }
 [data-theme="dark"] .contribution-cell.level-1 {
   background-color: #0e4429;
